# Bonzai-OSM

./: .gitignore  PROJECT.md  README.md  commands.md  cspell.json  instruct.md
bonzai_genai/: .gitignore  README.md  conftest.py  pyproject.toml
bonzai_genai/configs/: attributes_v1.yaml
bonzai_genai/results/: ARCHITECTURE_GUIDE.html  EXPERIMENT_0_REPORT.html  EXPERIMENT_0_REPORT.md  PHASE_0A_COMPLETE.md  PLAN_3_REPORT.md  eval_results.json  singapore-manifest.json  sri_lanka-manifest.json  stage_a_metrics.csv  stage_b_metrics.csv  sweden-manifest.json  vae_metrics.csv
bonzai_genai/results/plan3a-sweden-samples/: sample_000.geojson  (+31 more)
bonzai_genai/scripts/: README.md  _train_runner.py  leonardo_data_prep.sbatch  leonardo_eval.sbatch  leonardo_experiment_0.sbatch  leonardo_plan3.sbatch  leonardo_stage_a_train.sbatch  leonardo_stage_b_train.sbatch  leonardo_vae_train.sbatch  prepare_tiles_local.py  render_architecture_guide.py  render_eval_report.py  run_eval.py  run_experiment_0.py  run_plan3.py  sample_smoke_check.py
bonzai_genai/tests/: test_attributes.py  test_config.py  test_eval_baselines.py  test_eval_sample_from_ckpt.py  test_eval_stage_a.py  test_eval_stage_b.py  test_models_configs.py  test_models_dit.py  test_models_inker.py  test_models_raster_encoder.py  test_models_vae.py  test_rasteriser.py  test_round_trip.py  test_sampling.py  test_scripts_plan3.py  test_shard_writer.py  test_synth.py  test_synth_extended.py  test_tile_bundle.py  test_tokeniser.py  test_tokens.py  test_training_data_module.py  test_training_lit_modules.py  test_training_samplers.py
(+172 files in other folders)
