[project]
name = "bonzai_genai"
version = "0.1.0"
description = "Generative city model — data prep + model code"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "shapely>=2.0",
    "pillow>=10.0",
    "scikit-image>=0.22",
    "scipy>=1.12",
    "webdataset>=0.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP"]
